# ClineMCP

./: .clinerules  .env.example  .gitignore  AGENT_CONTRACT.md  agent_routing.yaml  pyproject.toml
clinemcp/: __init__.py  clinerules.py  main.py  runner.py  sessions.py  telegram.py
clinemcp/mcp/: __init__.py  auth.py  server.py  tools.py
docs/adr/: ADR-001-port-8003-standalone-nssm-service.md  ADR-002-sqlite-session-persistence.md  ADR-003-cline-direct-child.md  ADR-004-tobor-clinemcp-peers.md  ADR-005-telegram-direct-httpx.md  ADR-006-one-active-session.md  ADR-007-auto-approve-always-true.md  ADR-008-fire-and-forget-background-task.md
docs/sdd/: ClineMCP_SDD_v0_1.md
docs/state/: current.md
tests/: __init__.py  test_agent_routing.py  test_runner.py  test_sessions.py  test_telegram.py
tests/mcp/: __init__.py  test_auth.py  test_handlers.py
